--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRESIaIWiv7Lr97ShveH4_zVvzPOabQPW7B5w&usqp=CAU" alt="" width="70" height="58" class="d-inline-block align-text-center">
         Consesionaria Juanita
       </a>
@@ -10,155 +10,48 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Menu</a>
+            <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Nuevos</a>
+            <a class="nav-link" aria-current="page" routerLink="/modelos" routerLinkActive="active">Modelos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Ofertas</a>
+            <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Ofertas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Cotizacion</a>
+            <a class="nav-link" aria-current="page" routerLink="/cotizacion" routerLinkActive="active">Cotizacion</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" routerLink="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Servicio Post Compra
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Seguros</a></li>
-              <li><a class="dropdown-item" href="#">Accesorios</a></li>
-              <li><a class="dropdown-item" href="#">Repuestos</a></li>
-              <li><a class="dropdown-item" href="#">Mantemiento</a></li>
+              <li><a class="dropdown-item" routerLink="">Seguros</a></li>
+              <li><a class="dropdown-item" routerLink="">Accesorios</a></li>
+              <li><a class="dropdown-item" routerLink="">Repuestos</a></li>
+              <li><a class="dropdown-item" routerLink="">Mantemiento</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" routerLink="/postventa">¿Necesita algo?</a></li>
             </ul>
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
+          <!-- <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="/login" routerLinkActive="active">Iniciar Sesion</a>
+          </li> -->
+          <!-- <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Registrate</a>
+          </li> -->
+          <a class="navbar-brand" >
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-uaK5MQMEY1_ds2IHnWNvKen6q96rbt2rgQ&usqp=CAU" width="60" alt="">
+          </a>
+          <a class="navbar-brand" >
+            <img src="https://yt3.ggpht.com/ytc/AKedOLQxW54IhTwy9xJtpoF_7RLwNnkuKIDL1iBdriPf8g=s900-c-k-c0x00ffffff-no-rj" width="60" alt="">
+          </a>
+          <button class="btn btn-dark" aria-current="page" routerLink="/login">Iniciar Sesion</button>
+          <button class="btn btn-dark" aria-current="page" routerLink="/login">Registrarse</button>
         </form>
       </div>
     </div>
 </nav>
-<div class="container w-75 bg-secondary mt-1">
-    <div class="row">
-      <div class="col">
-        <h1>Datos del Cliente</h1>
-        <div class="mb-3">
-            <label for="Cliente-DNI" class="form-label">Dni</label>
-            <input type="text" class="form-control" id="Cliente-DNI" aria-describedby="DNIHelp" [(ngModel)]="cliente.Dni">
-            <div id="DNIHelp" class="form-text">Ingrese su numero de DNI</div>
-        </div>
-        <div class="mb-3">
-            <label for="Cliente-Nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="Cliente-Nombre" aria-describedby="NombreHelp" [(ngModel)]="cliente.Nombre">
-            <div id="NombreHelp" class="form-text">Ingrese su nombre</div>
-        </div>
-        <div class="mb-3 form-check">
-            <label for="Cliente-Apellido" class="form-label">Apellidos</label>
-            <input type="text" class="form-control" id="Cliente-Apellido" aria-describedby="ApellidoHelp" [(ngModel)]="cliente.Apellido">
-            <div id="ApellidoHelp" class="form-text">Ingrese su apellido</div>
-        </div>
-        <div class="mb-3 form-check">
-            <label for="Cliente-Email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="Cliente-Email" aria-describedby="EmailHelp" [(ngModel)]="cliente.Email">
-            <div id="EmailHelp" class="form-text">Ingrese su correo electronico</div>
-        </div>
-        <div class="mb-3 form-check">
-            <label for="Cliente-Telefono" class="form-label">Telefono</label>
-            <input type="text" class="form-control" id="Cliente-Telefono" aria-describedby="TelefonoHelp" [(ngModel)]="cliente.Telefono">
-            <div id="TelefonoHelp" class="form-text">Ingrese su numero telefonico</div>
-        </div>
-        <!-- <div class="mb-3 form-check">
-            <label for="Cliente-Departamento" class="form-label">Departamento</label>
-            <input type="text" class="form-control" id="Cliente-Departamento" aria-describedby="DepartamentoHelp" [value]="cliente.Departamento">
-            <div id="DepartamentoHelp" class="form-text">Ingrese el departamento al que pertenece/div>
-        </div> -->
-        <div class="mb-3">
-            <label for="Cliente-Departamento" class="form-label">Departamento</label>
-            <select id="Cliente-Departamento" class="form-select" [(ngModel)]="cliente.Departamento">
-            <option></option>
-            <option>Arequipa</option>
-            <option>Cusco</option>
-            <option>La Libertad</option>
-            <option>Lima</option>
-            <option>Piura</option>
-            </select>
-        </div>
-    </div>
-    <div class="col">
-        <h1>Datos del Vehiculo</h1>
-        <div class="mb-3">
-            <label for="Vehiculo-Marca" class="form-label">Marca</label>
-            <select id="Vehiculo-Marca" class="form-select" [(ngModel)]="vehiculo.Marca">
-            <option></option>
-            <option>Toyota</option>
-            <option>Kia</option>
-            <option>Susuki</option>
-            <option>Hyundai</option>
-            <option>Chevrolet</option>
-            <option>Nissan</option>
-            <option>Volvo</option>
-            </select>
-        </div>
-        <h4>Estado</h4>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="Vehiculo-Estado">
-            <label class="form-check-label" for="Vehiculo-Estado">
-              Nuevo
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="Vehiculo-Estado" checked>
-            <label class="form-check-label" for="Vehiculo-Estado">
-              Usado
-            </label>
-        </div>
-        <!-- <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="Vehiculo-Estado">
-            <label class="form-check-label" for="Vehiculo-Estado">
-              Nuevo
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="Vehiculo-Estado" checked>
-            <label class="form-check-label" for="Vehiculo-Estado">
-              Antiguo
-            </label>
-        </div> -->
-        <div class="mb-3">
-            <label for="Vehiculo-Modelo" class="form-label">Modelo</label>
-            <select id="Vehiculo-Modelo" class="form-select" [(ngModel)]="vehiculo.Modelo">
-            <option></option>
-            <option>Hiace</option>
-            <option>SW4</option>
-            <option>Hilux</option>
-            <option>Yaris Sedan</option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="Vehiculo-Version" class="form-label">Version</label>
-            <select id="Vehiculo-Version" class="form-select" [(ngModel)]="vehiculo.Version">
-            <option></option>
-            <option>2010</option>
-            <option>2012</option>
-            <option>2014</option>
-            <option>2016</option>
-            <option>2018</option>
-            <option>2020</option>
-            <option>2022</option>
-            </select>
-        </div>
-        <h5>Comentarios/Observaciones</h5>
-        <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="Comentarios-Observaciones" style="height: 100px"></textarea>
-            <label for="Comentarios-Observaciones">Mensaje</label>
-        </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="Terminos-Condiciones">
-            <label class="form-check-label" for="Terminos-Condiciones">Acepta los terminos y condiciones y la politica de privacidad</label>
-    </div>
-    <button class="btn btn-dark" (click)="GuardarDatos()">Guardar</button>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
