--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Menu</a>
+            <a class="nav-link" aria-current="page" routerLink="/menu" routerLinkActive="active">Menu</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLink="/modelos" routerLinkActive="active">Modelos</a>
@@ -22,13 +22,12 @@
             <a class="nav-link" aria-current="page" routerLink="/cotizacion" routerLinkActive="active">Cotizacion</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Servicio Post Compra
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="">Seguros</a></li>
-              <li><a class="dropdown-item" routerLink="">Accesorios</a></li>
-              <li><a class="dropdown-item" routerLink="">Repuestos</a></li>
+              <li><a class="dropdown-item" routerLink="/accesorios">Accesorios</a></li>
+              <li><a class="dropdown-item" routerLink="/repuestos">Repuestos</a></li>
               <li><a class="dropdown-item" routerLink="">Mantemiento</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" routerLink="/postventa">¿Necesita algo?</a></li>
