--- a/src/app/modelos/modelos.component.html
+++ b/src/app/modelos/modelos.component.html
@@ -74,37 +74,43 @@
          <h4>Nombre: {{Auto01.nombre}}</h4> 
          <p><img src="{{Auto01.imagen}}" alt="Ya fue P"></p>
          <p>Precio: {{Auto01.precio}}</p>
+         <button class="btn btn-dark">Cotizar</button>
       </div>
   <!-- ...... AUTO_02 ...... -->
       <div class="card">
          <h4>Nombre: {{Auto02.nombre}}</h4> 
          <p><img src="{{Auto02.imagen}}" alt="Ya fue P"></p>
          <p>Precio: {{Auto02.precio}}</p>
+         <button class="btn btn-dark">Cotizar</button>
       </div>
   <!-- ...... AUTO_03 ...... -->
       <div class="card">
         <h4>Nombre: {{Auto03.nombre}}</h4> 
         <p><img src="{{Auto03.imagen}}" alt="Ya fue P"></p>
         <p>Precio: {{Auto03.precio}}</p>
+        <button class="btn btn-dark">Cotizar</button>
       </div>
       
       <!-- ...... AUTO_04 ...... -->
-          <div class="card">
-             <h4>Nombre: {{Auto04.nombre}}</h4> 
-             <p><img src="{{Auto04.imagen}}" alt="Ya fue P"></p>
-             <p>Precio: {{Auto04.precio}}</p>
-          </div>
+      <div class="card">
+        <h4>Nombre: {{Auto04.nombre}}</h4> 
+        <p><img src="{{Auto04.imagen}}" alt="Ya fue P"></p>
+        <p>Precio: {{Auto04.precio}}</p>
+        <button class="btn btn-dark">Cotizar</button>
+      </div>
       <!-- ...... AUTO_05 ...... -->
           <div class="card">
              <h4>Nombre: {{Auto05.nombre}}</h4> 
              <p><img src="{{Auto05.imagen}}" alt="Ya fue P"></p>
              <p>Precio: {{Auto05.precio}}</p>
+             <button class="btn btn-dark">Cotizar</button>
           </div>
       <!-- ...... AUTO_06 ...... -->
           <div class="card">
             <h4>Nombre: {{Auto06.nombre}}</h4> 
             <p><img src="{{Auto06.imagen}}" alt="Ya fue P"></p>
             <p>Precio: {{Auto06.precio}}</p>
+            <button class="btn btn-dark">Cotizar</button> 
           </div>
       </div>
   
