--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -9,9 +9,9 @@
 }
 .container2 .card{
     color: #03045e;
-    background-color: #f1faee;
+    background-color: #ffffff;
     width: 355px;
-    height: 370px;
+    height: 335px;
     border-radius: 11px;
     box-shadow:  0 5px 11px rgba(0, 0, 0,0.2);
     overflow: hidden;
