--- a/src/app/accesorios/accesorios.component.html
+++ b/src/app/accesorios/accesorios.component.html
@@ -13,7 +13,6 @@
         <img src="https://www.chevrolet.com.pe/content/dam/chevrolet/south-america/peru/espanol/index/index-subcontent/2021/03-images/mh-tracker-mujeres.jpg?imwidth=1200" class="d-block w-100" alt="...">
       </div>
     </div>
-    
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -33,40 +32,47 @@
     <h1 class="p-3 fs-2 border-top border-3" style="margin: -8px;">
   </h1> 
 </section>
-
+ <!-- <div class="clas-container">
+  <h4>Nombre: {{ accesoriogg.nombre }}</h4> 
+  <img src="{{ accesoriogg.imagen }}" alt="Ya fue P">
+  <p>Precio: {{ accesoriogg.precio }}</p>
+</div>  -->
+  <!-- <button> Agregar </button> -->
+  <!-- <app-productos></app-productos> -->
 <div class="container2">
-  <!-- ...... ACCESORIO_01 ...... -->
+   ...... ACCESORIO_01 ...... 
       <div class="card">
          <h4>Nombre: {{Accesorio01.nombre}}</h4> 
          <p><img src="{{Accesorio01.imagen}}" alt="Ya fue P"></p>
          <p>Precio: {{Accesorio01.precio}}</p>
+         <button></button>
       </div>
-  <!-- ...... ACCESORIO_02 ...... -->
+   ...... ACCESORIO_02 ...... 
       <div class="card">
          <h4>Nombre: {{Accesorio02.nombre}}</h4> 
          <p><img src="{{Accesorio02.imagen}}" alt="Ya fue P"></p>
          <p>Precio: {{Accesorio02.precio}}</p>
       </div>
-  <!-- ...... ACCESORIO_03 ...... -->
+   ...... ACCESORIO_03 ...... 
       <div class="card">
         <h4>Nombre: {{Accesorio03.nombre}}</h4> 
         <p><img src="{{Accesorio03.imagen}}" alt="Ya fue P"></p>
         <p>Precio: {{Accesorio03.precio}}</p>
       </div>
       
-      <!-- ...... ACCESORIO_04 ...... -->
+     ...... ACCESORIO_04 ...... 
           <div class="card">
              <h4>Nombre: {{Accesorio04.nombre}}</h4> 
              <p><img src="{{Accesorio04.imagen}}" alt="Ya fue P"></p>
              <p>Precio: {{Accesorio04.precio}}</p>
           </div>
-      <!-- ...... ACCESORIO_05 ...... -->
+       ...... ACCESORIO_05 ...... 
           <div class="card">
              <h4>Nombre: {{Accesorio05.nombre}}</h4> 
              <p><img src="{{Accesorio05.imagen}}" alt="Ya fue P"></p>
              <p>Precio: {{Accesorio05.precio}}</p>
           </div>
-      <!-- ...... ACCESORIO_06 ...... -->
+       ...... ACCESORIO_06 ...... 
           <div class="card">
             <h4>Nombre: {{Accesorio06.nombre}}</h4> 
             <p><img src="{{Accesorio06.imagen}}" alt="Ya fue P"></p>
