--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,6 +30,14 @@
                 <div class="fw-bold text-center py-3">
                     <span>¿No tiene una cuenta? <a routerLink="/cotizacion">Registrarse</a></span>
                 </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-center links">
+                        Iniciar Sesion como administrador<a routerLink="/login-admin">Click Aqui</a>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <a href="#">Olvidaste tu contraseña?</a>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
